--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
   <!-- <img src="http://lorempixel.com/400/200/sports/" alt="Sorry could not find the image."> -->
 
-  <p>I am a Data Engineer finishing up my Boot camp at University of California Irvine in Data Analtics and Visualization</p>
+  <p>I am a Data Engineer continuing my education with Data Analytics and Visualization Boot camp at University of California Irvine.
+    I have worked as an Application/Data Engineer for Schlumberger for three years where I had the opportunity to extensively
+    work with Microsoft Excel to perform analysis on data collected by our sensors in the field. I was able to use the data collected
+    to help management visualize trends and make informed decisions on sales and inventory management.
+  </p>
   
   <ul>
     <li><strong>Email:</strong> nabi.sheikh23@gmail.com</li>
