Added github portfolio

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <li><strong>Email:</strong> nabi.sheikh23@gmail.com</li>
     <li><strong>Phone:</strong> 714-462-7988</li>
     <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/nabeel--sheikh/" target="_blank">https://www.linkedin.com/in/nabeel--sheikh/</a></li>
+    <li><strong>GitHub:</strong> <a href="https://github.com/nsheikh23" target="_blank"> https://github.com/nsheikh23</a></li>
   </ul>
 </body>
 
