--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Biography</title>
+
+  <style>
+    h1 {
+      margin-bottom: 15px;
+      font-size: 60px;
+      color: blue;
+      text-align: center;
+      text-decoration: underline;
+      background-color: black;
+    }
+  </style>
 </head>
 
 <body>
