--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
         <h2 id="bio-name">Nabeel Sheikh</h2>
         <img id="bio-image" src="ProDP1.jpg" alt="Nabeel Sheikh">
       </section>
-      <p>I am a Data Engineer continuing my education with Data Analytics and Visualization Boot camp at University of California Irvine.
-        I have worked as an Application/Data Engineer for Schlumberger for three years where I had the opportunity to extensively
-        work with Microsoft Excel to perform analysis on data collected by our sensors in the field. I was able to use the data collected
-        to help management visualize trends and make informed decisions on sales and inventory management.
+      <p>DATA ENGINEER</p>
+      <p>With Business Intelligence skills</p>
+      <p>
+        Technically sound Data Engineer with a certificate in data from University of California, Irvine and 3 years of experience interpreting, analyzing, modeling, and implementing strategies to optimize statistical efficiency and quality. 
+        Proven background in effectively communicating relevant data into business insight to promote informed decision-making; and guiding projects from conception to completion while managing design effort and guide installation process for on-schedule project delivery. Able to consult with internal and external clientele and utilize additional system resources to review and enhance configuration for optimal customer satisfaction. Strong communication and interpersonal skills. 
+        Skilled in Python, front end development tools such as JavaScript and Bootstrap, and both SQL and NoSQL databases (PostgreSQL, MongoDB). Thrives in utilizing tools to facilitate business driven solutions.        
       </p>
     </section>
 
