--- a/index.html
+++ b/index.html
@@ -27,10 +27,20 @@
       <p>DATA ENGINEER</p>
       <p>With Business Intelligence skills</p>
       <p>
-        Technically sound Data Engineer with a certificate in data from University of California, Irvine and 3 years of experience interpreting, analyzing, modeling, and implementing strategies to optimize statistical efficiency and quality. 
-        Proven background in effectively communicating relevant data into business insight to promote informed decision-making; and guiding projects from conception to completion while managing design effort and guide installation process for on-schedule project delivery. Able to consult with internal and external clientele and utilize additional system resources to review and enhance configuration for optimal customer satisfaction. Strong communication and interpersonal skills. 
-        Skilled in Python, front end development tools such as JavaScript and Bootstrap, and both SQL and NoSQL databases (PostgreSQL, MongoDB). Thrives in utilizing tools to facilitate business driven solutions.        
+        Since beginning my journey as a Data Engineer nearly 3 years ago, I have gained experience interpreting, analyzing, modeling, and implementing strategies to optimize statistical efficiency and quality. 
+        I have a proven background in effectively communicating relevant data into business insight to promote informed decision-making; and guided projects from conception to completion while managing design effort and ensuring on-schedule project delivery. 
+        I consulted with internal and external clientele and utilize additional system resources to review and enhance configuration for optimal customer satisfaction, demonstrating my strong communication and interpersonal skills. 
+        I thrive in exploring and utilizing tools to facilitate business driven solutions.        
       </p>
+
+      <h2>Languages I speak</h2>
+      <ul>
+        <li>Python</li>
+        <li>JavaScript</li>
+        <li>HTML & CSS</li>
+        <li>PostgreSQL</li>
+        <li>MongoDB</li>
+      </ul>
     </section>
 
     <aside id="contact-info">
