--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         I consulted with internal and external clientele and utilize additional system resources to review and enhance configuration for optimal customer satisfaction, demonstrating my strong communication and interpersonal skills. 
         I thrive in exploring and utilizing tools to facilitate business driven solutions.        
       </p>
+    </section>
 
+    <aside id="lists">
       <h2>Languages I speak</h2>
       <ul>
         <li>Python</li>
@@ -41,9 +43,7 @@
         <li>PostgreSQL</li>
         <li>MongoDB</li>
       </ul>
-    </section>
-
-    <aside id="contact-info">
+      <br>
       <h2>Contact Info</h2>
       <ul>
         <li><strong>Email:</strong> nabi.sheikh23@gmail.com</li>
