--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section id="main-bio">
       <section id="figure">
         <h2 id="bio-name">Nabeel Sheikh</h2>
-        <img id="bio-image" src="ProDP1.jpg" alt="Nabeel Sheikh">
+        <img id="bio-image" src="Pic.jpg" alt="Nabeel Sheikh">
       </section>
       <p>DATA ENGINEER</p>
       <p>With Business Intelligence skills</p>
