--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li class="nav-item active">
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
@@ -58,9 +58,9 @@
     </div>
   </nav>
   
-  <header>
+  <!-- <header>
     <h1>A little about me</h1>
-  </header>
+  </header> -->
 
   <main class="container">
     <section id="main-bio">
