--- a/projects.html
+++ b/projects.html
@@ -9,8 +9,8 @@
 
   <!-- This line is money! It points your HTML to the CSS file. -->
   <!-- Notice the "relative" pathway? It matches a file inside our current directory's "assets" folder. Open it to see our style rules. -->
+  <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="Assets/styles/style.css">
 
 </head>
 
@@ -24,40 +24,29 @@
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="about.html">About</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="projects.html">Projects</a>
-        </li>
-        <li class="nav-item">
+        <li class="nav-item active">
+            <a class="nav-link" href="projects.html">Projects<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
         
       </ul>
-      <!-- <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form> -->
     </div>
   </nav>
   
+
   <main class="container-fluid">
-    <div style=background-color:white ; class="jumbotron jumbotron-fluid" id='intro'>
-      <div class="container-fluid">
-        <h1 class="display-4">Welcome to The Sheikh Analysis</h1>
-        <p class="lead">where you will witness analysis performed on topics that are trending!</p>
-        <p class='lead'>From the stock market to social media, you can find it all here!</p>
-        <a class='btn btn-primary btn-lg' href="projects.html" role="button">Projects</a>
-        <hr class='my-4'>
-        <p class='lead'>If you would like to see analysis on a specific topic, send me a request!</p>
-        <a class='btn btn-primary btn-lg' href="contact.html" role="button">Requests</a>
-      </div>
-    </div>
-  </main>  
+    <h3>PROJECTS</h3>
+    
+
+  </main>
 
 </body>
 
