Updated projects page

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>Biography</title>
+  <title>Contact</title>
 
   <!-- This line is money! It points your HTML to the CSS file. -->
   <!-- Notice the "relative" pathway? It matches a file inside our current directory's "assets" folder. Open it to see our style rules. -->
@@ -62,7 +62,7 @@
         <div class='col-md-6'>
             <div class="form-group">
                 <label for="exampleFormControlInput1">Topic of interest:</label>
-                <input type="text" class="form-control" id="topic_request" placeholder="Please share the topic only">
+                <input type="text" class="form-control" id="topic_request" placeholder="Please share the topic only here">
             </div>
         </div>
     </div>
