--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>Biography</title>
+  <title>Home</title>
 
   <!-- This line is money! It points your HTML to the CSS file. -->
   <!-- Notice the "relative" pathway? It matches a file inside our current directory's "assets" folder. Open it to see our style rules. -->
