--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>Biography</title>
+  <title>Projects</title>
 
   <!-- This line is money! It points your HTML to the CSS file. -->
   <!-- Notice the "relative" pathway? It matches a file inside our current directory's "assets" folder. Open it to see our style rules. -->
@@ -44,7 +44,17 @@
 
   <main class="container-fluid">
     <h3>PROJECTS</h3>
-    
+    <br>
+    <div class='row'>
+      <div class="col-md-6">
+        <h4>Stock Market Analysis</h4>
+        <a href="stockmarket.html"><img src="Assets/imgs/stock_analysis/Since1977.png" width="250" height="200"></a>
+      </div>
+      <div class="col-md-6">
+        <h4>Web Visualization</h4>
+        <a href=""><img src="" alt="">Dashboard</a>
+      </div>
+    </div>
 
   </main>
 
