--- a/projects.html
+++ b/projects.html
@@ -9,8 +9,8 @@
 
   <!-- This line is money! It points your HTML to the CSS file. -->
   <!-- Notice the "relative" pathway? It matches a file inside our current directory's "assets" folder. Open it to see our style rules. -->
-  <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
@@ -52,7 +52,7 @@
       </div>
       <div class="col-md-6">
         <h4>Web Visualization</h4>
-        <a href=""><img src="" alt="">Dashboard</a>
+        <a href="../Web-Design-Challenge/WebVisualizations/landing_page.html"><img src="../Web-Design-Challenge/WebVisualizations/assets/images/web image.jpg" alt="">Dashboard</a>
       </div>
     </div>
 
