Working on web-design under projects

--- a/projects.html
+++ b/projects.html
@@ -49,10 +49,12 @@
       <div class="col-md-6">
         <h4>Stock Market Analysis</h4>
         <a href="stockmarket.html"><img src="Assets/imgs/stock_analysis/Since1977.png" width="250" height="200"></a>
+        <p>Analyzing the stock market and the impact of COVID-19.</p>
       </div>
       <div class="col-md-6">
         <h4>Web Visualization</h4>
-        <a href="../Web-Design-Challenge/WebVisualizations/landing_page.html"><img src="../Web-Design-Challenge/WebVisualizations/assets/images/web image.jpg" alt="">Dashboard</a>
+        <a href="../Web-Design-Challenge/WebVisualizations/landing_page.html"><img src="Assets/imgs/web image.jpg" alt=""></a>
+        <p>Creating a web analysis dashboard.</p>
       </div>
     </div>
 
