--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,7 @@
       </div>
       <div class="col-md-6">
         <h4>Web Visualization</h4>
-        <a href="../Web-Design-Challenge/WebVisualizations/landing_page.html"><img src="Assets/imgs/web image.jpg" alt=""></a>
+        <a href="https://nsheikh23.github.io/Web-Design-Challenge/index.html"><img src="Assets/imgs/web image.jpg" alt=""></a>
         <p>Creating a web analysis dashboard.</p>
       </div>
     </div>
