Updated the projects with web scrapping

--- a/projects.html
+++ b/projects.html
@@ -56,6 +56,11 @@
         <a href="https://nsheikh23.github.io/Web-Design-Challenge/index.html"><img src="Assets/imgs/web image.jpg" alt=""></a>
         <p>Creating a web analysis dashboard.</p>
       </div>
+      <div class="col-md-6">
+        <h4>Mission to Mars</h4>
+        <a href="https://nsheikh23.github.io/web-scraping-challenge/index.html"><img src="Assets/imgs/mission_to_mars.png" alt=""></a>
+        <p>Scraping the web for updates on Mars.</p>
+      </div>
     </div>
 
   </main>
