--- a/projects.html
+++ b/projects.html
@@ -46,17 +46,17 @@
     <h3>PROJECTS</h3>
     <br>
     <div class='row'>
-      <div class="col-md-4">
+      <div class="col-xs-8 col-md-3">
         <h4>Stock Market Analysis</h4>
         <a href="stockmarket.html"><img src="Assets/imgs/stock_analysis/Since1977.png" width="250" height="200"></a>
         <p>Analyzing the stock market and the impact of COVID-19.</p>
       </div>
-      <div class="col-md-4">
+      <div class="col-xs-8 col-md-3">
         <h4>Web Visualization</h4>
         <a href="https://nsheikh23.github.io/Web-Design-Challenge/index.html"><img src="Assets/imgs/web image.jpg" alt=""></a>
         <p>Creating a web analysis dashboard.</p>
       </div>
-      <div class="col-md-4">
+      <div class="col-xs-8 col-md-3">
         <h4>Mission to Mars</h4>
         <a href="https://nsheikh23.github.io/web-scraping-challenge/index.html"><img src="Assets/imgs/mission_to_mars.png" alt="Mission to Mars"></a>
         <p>Scraping the web for updates on Mars.</p>
