Updated landing page content

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="container-fluid">
         <h1 class="display-4">Welcome to The Sheikh Analysis</h1>
         <p class="lead">where you will witness analysis performed on topics that are trending!</p>
-        <p class='lead'>From the stock market to social media, you can find it all here!</p>
+        <p class='lead'>From the stock market to Mars, you can find it all here!</p>
         <a class='btn btn-primary btn-lg' href="projects.html" role="button">Projects</a>
         <hr class='my-4'>
         <p class='lead'>If you would like to see analysis on a specific topic, send me a request!</p>
