Updated projects page and style

--- a/projects.html
+++ b/projects.html
@@ -42,27 +42,27 @@
   </nav>
   
 
-  <main class="container-fluid">
+  <main class="container content">
     <br>
     <h3>PROJECTS</h3>
     <br>
     <div class='row'>
-      <div class="col-xs-10 col-md-4" id='boxes'>
+      <div class="col-xs-10 col-md-3" id='boxes'>
         <h4>Stock Market Analysis</h4>
         <a href="stockmarket.html">
           <img id='images' src="Assets/imgs/stock_analysis/DOW YTD.png">
         </a>
-        <p>Analyzing the stock market and the impact of COVID-19.</p>
+        <p>Stock market and the impact of COVID-19.</p>
       </div>
       
-      <div class="col-xs-10 col-md-4" id='boxes'>
+      <div class="col-xs-10 col-md-3" id='boxes'>
         <h4>Web Visualization</h4>
         <a href="https://nsheikh23.github.io/Web-Design-Challenge/index.html">
           <img id='images' src="Assets/imgs/web image.jpg" alt='Web Visualization'>
         </a>
-        <p>Creating a web analysis dashboard.</p>
+        <p>Web analysis dashboard on weather affected by latitude.</p>
       </div>
-      <div class="col-xs-10 col-md-4" id='boxes'>
+      <div class="col-xs-10 col-md-3" id='boxes'>
         <h4>Mission to Mars</h4>
         <a href="https://nsheikh23.github.io/web-scraping-challenge/index.html">
           <img id='images' src="Assets/imgs/mission_to_mars.png" alt="Mission to Mars">
