--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Home</title>
 
   <!-- This line is money! It points your HTML to the CSS file. -->
@@ -51,6 +52,47 @@
         <h1 class="display-4">Welcome to The Sheikh Analysis</h1>
         <p class="lead">where you will witness analysis performed on topics that are trending!</p>
         <p class='lead'>From the stock market to Mars, you can find it all here!</p>
+        <div class="c-wrapper">
+          <div id="carousel" class="carousel slide col-md-6" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carousel" data-slide-to="0"></li>
+              <li data-target="#carousel" data-slide-to="1"></li>
+              <li data-target="#carousel" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="Assets/imgs/stock_analysis/DOW YTD.png" class="d-block w-100" alt="Stock Analysis">
+                <!-- <div class="carousel-caption d-none d-md-block"> -->
+                  <!-- <h5>Stock Analysis</h5> -->
+                  <!-- <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p> -->
+                <!-- </div> -->
+              </div>
+              <div class="carousel-item">
+                <img src="Assets/imgs/web image.jpg" class="d-block w-100" alt="Web Analysis Dashboard">
+                <!-- <div class="carousel-caption d-none d-md-block"> -->
+                  <!-- <h5>Web Analysis Dashboard</h5> -->
+                  <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
+                <!-- </div> -->
+              </div>
+              <div class="carousel-item">
+                <img src="Assets/imgs/mission_to_mars.png" class="d-block w-100" alt="Mission to Mars">
+                <!-- <div class="carousel-caption d-none d-md-block"> -->
+                  <!-- <h5>Webscrapping for updates on Mars</h5> -->
+                  <!-- <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p> -->
+                <!-- </div> -->
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+        <br>
         <a class='btn btn-primary btn-lg' href="projects.html" role="button">Projects</a>
         <hr class='my-4'>
         <p class='lead'>If you would like to see analysis on a specific topic, send me a request!</p>
@@ -58,6 +100,10 @@
       </div>
     </div>
   </main>  
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </body>
 
