--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
     <div class='row'>
       <div class="col-xs-10 col-md-3" id='boxes'>
         <h4>Stock Market Analysis</h4>
-        <a href="stockmarket.html">
+        <a href="/Assets/Projects/stockmarket/stockmarket.html">
           <img id='images' src="Assets/imgs/stock_analysis/DOW YTD.png">
         </a>
         <p>Stock market and the impact of COVID-19.</p>
