Updated projects page

--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
       </div>
       <div class="col-xs-10 col-md-3" id='boxes'>
         <h4>Mission to Mars</h4>
-        <a href="https://nsheikh23.github.io/web-scraping-challenge/index.html">
+        <a href="Assets/Projects/Mission_to_Mars/templates/index.html">
           <img id='images' src="Assets/imgs/mission_to_mars.png" alt="Mission to Mars">
         </a>
         <p>Scraping the web for updates on Mars.</p>
