updated landing page and styling

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h1 class="display-4">Welcome to The Sheikh Analysis</h1>
         <p class="lead">where you will witness analysis performed on topics that are trending!</p>
         <p class='lead'>From the stock market to Mars, you can find it all here!</p>
-        <div class="c-wrapper">
+        <div class="c-wrapper" style="align-content: center;">
           <div id="carousel" class="carousel slide col-md-6" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carousel" data-slide-to="0"></li>
